# disnake-ext-paginator

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  simple_bot.py
LICENSES/: Pagination-LICENSE
disnake_ext_paginator/: __init__.py  paginator.py
disnake_ext_paginator/LICENSES/: Pagination-LICENSE
