[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "disnake-ext-paginator"
version = "0.0.1"
authors = [
    { name="Snipy7374", email="snipy7374@gmail.com" },
]
description = "A very simple extension to easily create customizable Paginator"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Snipy7374/disnake-ext-paginator"
